[gd_scene load_steps=11 format=2]

[ext_resource path="res://towers/tower2/scripts/Bullet.gd" type="Script" id=1]
[ext_resource path="res://towers/tower2/resources/bullet.png" type="Texture" id=2]
[ext_resource path="res://fx/particle3.png" type="Texture" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.0
height = 15.0

[sub_resource type="CircleShape2D" id=2]
radius = 125.0

[sub_resource type="Gradient" id=3]
colors = PoolColorArray( 1, 1, 1, 0.47451, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="Curve" id=5]
_data = [ Vector2( 0, 0.37592 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=7]
resource_local_to_scene = true
emission_shape = 1
emission_sphere_radius = 5.0
flag_disable_z = true
gravity = Vector3( -1000, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 6 )
color_ramp = SubResource( 4 )

[node name="Bullet" type="Area2D"]
collision_layer = 0
collision_mask = 4
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.08, 0.08 )
texture = ExtResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
rect = Rect2( -10, -5, 20, 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = -1.5708
shape = SubResource( 1 )

[node name="ExplosionArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplosionArea"]
shape = SubResource( 2 )

[node name="Particles2D" type="Particles2D" parent="."]
scale = Vector2( 0.3, 0.3 )
amount = 16
speed_scale = 2.0
process_material = SubResource( 7 )
texture = ExtResource( 3 )
[connection signal="area_entered" from="." to="." method="_on_Bullet_area_entered"]
[connection signal="viewport_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_exited"]
